# Educational-Website

./: .gitignore  CMakeLists.txt  Main
DataStructureWebsite/: manage.py
DataStructureWebsite/DataStructureWebsite/: asgi.py  urls.py  wsgi.py
DataStructureWebsiteComponent/Backend/: CMakeLists.txt
DataStructureWebsiteComponent/DataStructureWebsite/: settings.py
DataStructureWebsiteComponent/UnitTests/: CMakeLists.txt
VirtualEnv/: pyvenv.cfg
